--- a/en/_includes/toloka-api-toc.yaml
+++ b/en/_includes/toloka-api-toc.yaml
@@ -57,6 +57,8 @@ items:
         href: ../api/concepts/upload-tasks.md
       - name: Merging tasks
         href: ../api/concepts/tasks.md
+      - name: Task distribution intervals
+        href: ../api/concepts/intervals.md
   - name: Subscriptions to events
     items:
       - name: Notification format
